- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.12.2, 5.12.3, 5.13.0 Beta2, 5.13.0, 5.13.1, 5.13.2, 5.14.0
 - 
    None
 - 
    Manjaro GNU/Linux 64-bit with latest updates; Xfce.
 
- 
        
 - 
        a41701904e880f58e19b352ade1931d6cd1a7112 (qt/qtbase/5.12) 18e5df3c95181e2b559bbfe616954f9190922355 (qt/qtbase/6.0) d58d8eb903efac2bd823317fbca8833b12c49e1a (qt/tqtc-qtbase/tqtc/lts-5.15) f2d22d5a5126e7a73da620a60847fc124f724333 (qt/tqtc-qtbase/6.1)
 
Steps to reproduce:
 1. Build and run the attached example from terminal.
 2. Select some text in an external application (I mostly tested with Firefox, but could reproduce with Kate as well).
 3. Repeat step 2 until the bottommost line printed by the attached example application is Clipboard changed: 1 instead of the expected "<the last selected text>". This can take anywhere from 1 to 50 selection attempts.
 4. The expected line containing the last selected text will be eventually printed after ~5 seconds of user inactivity or after a mouse click or after moving the mouse pointer over the example application window.
This bug makes the timing of selected text translation by Goldendict dictionary lookup program unreliable.
This bug is not present in Qt 5.12.1, Qt 5.12.0, Qt 5.5.1, Qt 4.8.6.
 This issue might be related to QTBUG-74330.
NOTE: the bug happens much more rarely with the imperfect fix since Qt 5.13.1.
- is duplicated by
 - 
                    
QTBUG-102031 There is a issue of UI update when drag item and move between two windows.
-         
     - Closed
 
 -